--- a/docs/paper/introduction.tex
+++ b/docs/paper/introduction.tex
@@ -8,30 +8,30 @@
 
 %%
 \title{
-\jtitle{20XX年度人工知能学会全国大会・\LaTeX{}スタイルファイル}
+\jtitle{2026年度人工知能学会全国大会・\LaTeX{}スタイルファイル}
 \etitle{\LaTeX{} Style file for manuscripts of JSAI 20XX}
 }
 %%英文は以下を使用
 %\title{Style file for manuscripts of JSAI 20XX}
 
-\jaddress{氏名，所属，住所，電話番号，Fax番号，電子メールアドレスなど}
+\jaddress{新川大翔，大阪公立大学}
 
 \author{%
-\jname{第XX回全国大会プログラム委員会\first}
-\ename{The Program Committee of the XXth annual conference of JSAI}
+\jname{新川大翔\first}
+\ename{Hiroto Shinkawa}
 \and
-\jname{第2筆者氏名\second}
-\ename{Second Author's Name}
+\jname{西尾 謙一\second}
+\ename{ Nishio}
 %\and
 %Given-name Surname\third{}%%英文は左を使用
 }
 
 \affiliate{
-\jname{\first{}人工知能学会}
-\ename{The Japanese Society for Artificial Intelligence}
+\jname{\first{}大阪公立大学}
+\ename{Osaka Metropolitan University}
 \and
-\jname{\second{}所属和文2}
-\ename{Affiliation \#2 in English}
+\jname{\second{}大阪大学}
+\ename{Osaka University}
 %\and
 %\third{}Affiliation \#3 in English%%英文は左を使用
 }
