--- a/docs/paper/main.tex
+++ b/docs/paper/main.tex
@@ -18,13 +18,13 @@
 \jaddress{*2 nishio@ou.ac.jp}
 
 \author{%
-\jname{新川大翔\first, 西尾謙一\second}
-\ename{Hiroto Shinkawa, Kennichi Nishio}
+\jname{新川大翔\first, 西尾 謙一\second, 網 淳子\third }
+\ename{Hiroto Shinkawa, Kennichi Nishio, Junko Ami}
 }
 
 \affiliate{
-\jname{\first{大阪公立大学}. \second{大阪大学}}
-\ename{Osaka Metropolitan University, Osaka University}
+\jname{\first{大阪公立大学理学部}. \second{大阪大学工学部} \third{東京大学大学院工学系研究科選択学際専攻}}
+\ename{Osaka Metropolitan University, Osaka University, The University of Tokyo}
 }
 
 %\setcounter{page}{1}
