--- a/docs/paper/main.tex
+++ b/docs/paper/main.tex
@@ -23,7 +23,7 @@
 }
 
 \affiliate{
-\jname{\first{大阪公立大学理学部}. \second{大阪大学工学部} \third{東京大学大学院工学系研究科選択学際専攻}}
+\jname{\first{大阪公立大学理学部}. \second{大阪大学工学部} \third{東京大学大学院工学系研究科先端学際工学専攻}}
 \ename{Osaka Metropolitan University, Osaka University, The University of Tokyo}
 }
 
