--- a/docs/paper/main.tex
+++ b/docs/paper/main.tex
@@ -14,8 +14,7 @@
 \etitle{Adaptive Control of Temporal Inertia in Large-Scale Video Generation Models}
 }
 
-\jaddress{*1 sr24584e@st.omu.ac.jp}
-\jaddress{*2 nishio@ou.ac.jp}
+\jaddress{*1 sr24584e@st.omu.ac.jp\first, *2 nishio@ou.ac.jp\second, *3 junko.ami@csis.u-tokyo.ac.jp\third}
 
 \author{%
 \jname{新川大翔\first, 西尾 謙一\second, 網 淳子\third }
